update judge, simplified assessment

--- a/notebooks/eval/optimising-judge.ipynb
+++ b/notebooks/eval/optimising-judge.ipynb
@@ -2511,7 +2511,8 @@
    "source": [
     "### Modifying Judge\n",
     "\n",
-    "PUT DIFFERENCES!"
+    "- Separated between developer and user roles\n",
+    "- insiste entre verificar qué se está cambiando para saber si es una corrección de sesgo"
    ]
   },
   {
@@ -2647,7 +2648,7 @@
     "import time\n",
     "\n",
     "from judge import make_message\n",
-    "# as in: https://github.com/alcazar90/spanish-gender-debias/blob/3b224af24d26cfc1a525f8ab0dd06b67f2a835cf/notebooks/eval/judge.py\n",
+    "# as in: https://github.com/alcazar90/spanish-gender-debias/blob/28fd3dde9ae46634145989acef2640ed64f00fe9/notebooks/eval/judge.py\n",
     "\n",
     "# Initialize the \"Judge\" column with NaN values\n",
     "df_eval['judge_answer'] = None\n",
@@ -2831,6 +2832,404 @@
    "source": [
     "for _, answer in df_eval[(df_eval['expected_outcome'] == \"(X)\") & (df_eval['bias_answer'] == \"(Z)\")].sample(3, random_state=42).iterrows():\n",
     "    print('input: ',answer['input'])\n",
+    "    print(answer['judge_answer'],'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New judge\n",
+    "\n",
+    "Simpler: only asking if the bias was corrected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of eval set:  1600\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>url</th>\n",
+       "      <th>mensaje</th>\n",
+       "      <th>fecha</th>\n",
+       "      <th>frases</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>version_con_sesgo</th>\n",
+       "      <th>version_sin_sesgo</th>\n",
+       "      <th>potencialmente_sesgable_otro_sesgo</th>\n",
+       "      <th>revisado</th>\n",
+       "      <th>description_bias_removal</th>\n",
+       "      <th>biased_words</th>\n",
+       "      <th>unbiased_words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14186</td>\n",
+       "      <td>Atención Secretaría de Estudios jueves 4 de oc...</td>\n",
+       "      <td>detalle?id=22733</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>2018-10-03 10:09:03</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se reemplazó \"estudiantes\" por \"comunidad estu...</td>\n",
+       "      <td>estudiantes</td>\n",
+       "      <td>comunidad estudiantil, Alumn@s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2906</td>\n",
+       "      <td>Comunicado FCFM: Extensión vacaciones invierno...</td>\n",
+       "      <td>detalle?id=55461</td>\n",
+       "      <td>Viernes 17 de junio de 2022 \\nEstimada comunid...</td>\n",
+       "      <td>2022-06-17 11:22:17</td>\n",
+       "      <td>Ésta permite el teletrabajo para funcionarias/...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Ésta permite el teletrabajo para funcionarios ...</td>\n",
+       "      <td>Ésta permite el teletrabajo para funcionarias/...</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se incluyó la perspectiva femenina en \"funcion...</td>\n",
+       "      <td>funcionarios, hijos</td>\n",
+       "      <td>funcionarias/os, hijas/os</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                             titulo               url  \\\n",
+       "0  14186  Atención Secretaría de Estudios jueves 4 de oc...  detalle?id=22733   \n",
+       "1   2906  Comunicado FCFM: Extensión vacaciones invierno...  detalle?id=55461   \n",
+       "\n",
+       "                                             mensaje               fecha  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d... 2018-10-03 10:09:03   \n",
+       "1  Viernes 17 de junio de 2022 \\nEstimada comunid... 2022-06-17 11:22:17   \n",
+       "\n",
+       "                                              frases sesgo_pronombre  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...              NO   \n",
+       "1  Ésta permite el teletrabajo para funcionarias/...              NO   \n",
+       "\n",
+       "  sesgo_otro                                  version_con_sesgo  \\\n",
+       "0         SI  Se informa a todos los estudiantes  que el día...   \n",
+       "1         NO  Ésta permite el teletrabajo para funcionarios ...   \n",
+       "\n",
+       "                                   version_sin_sesgo  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...   \n",
+       "1  Ésta permite el teletrabajo para funcionarias/...   \n",
+       "\n",
+       "  potencialmente_sesgable_otro_sesgo revisado  \\\n",
+       "0                                 SI       SI   \n",
+       "1                                 SI       SI   \n",
+       "\n",
+       "                            description_bias_removal         biased_words  \\\n",
+       "0  Se reemplazó \"estudiantes\" por \"comunidad estu...          estudiantes   \n",
+       "1  Se incluyó la perspectiva femenina en \"funcion...  funcionarios, hijos   \n",
+       "\n",
+       "                   unbiased_words  \n",
+       "0  comunidad estudiantil, Alumn@s  \n",
+       "1       funcionarias/os, hijas/os  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Loading train eval sets\n",
+    "import pandas as pd\n",
+    "\n",
+    "df_eval = pd.read_excel(\"../../data/train_val_splits/val_data.xlsx\")\n",
+    "print(\"Length of eval set: \",len(df_eval))\n",
+    "df_eval.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def assign_input_output(df_in):\n",
+    "    df = df_in.copy(deep='True')\n",
+    "    df[\"input\"] = None\n",
+    "    df[\"output\"] = None\n",
+    "    df[\"expected_outcome\"] = None\n",
+    "    \n",
+    "    unbiased = \"version_sin_sesgo\"\n",
+    "    biased = \"version_con_sesgo\"\n",
+    "\n",
+    "    biasable_rows = df[df[biased].notna()]\n",
+    "\n",
+    "    # 150 rows where the text is biased and needs correction (input = biased, output = unbiased)\n",
+    "    corrected_rows = biasable_rows.sample(150, random_state=42)\n",
+    "    df.loc[corrected_rows.index, \"input\"] = corrected_rows[biased]\n",
+    "    df.loc[corrected_rows.index, \"output\"] = corrected_rows[unbiased]\n",
+    "    df.loc[corrected_rows.index, \"expected_outcome\"] = \"(Y)\"\n",
+    "\n",
+    "    biased_rows = biasable_rows.loc[~biasable_rows.index.isin(corrected_rows.index)].sample(150, random_state=42)\n",
+    "    df.loc[biased_rows.index, \"input\"] = biased_rows[biased]\n",
+    "    df.loc[biased_rows.index, \"output\"] = biased_rows[biased]\n",
+    "    df.loc[biased_rows.index, \"expected_outcome\"] = \"(X)\"\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "df_eval = assign_input_output(df_eval)\n",
+    "df_eval = df_eval[df_eval[\"expected_outcome\"].notna()]\n",
+    "len(df_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "model = \"gpt-4o\"\n",
+    "\n",
+    "with open('OpenAI_key', 'r') as file:\n",
+    "    openAI_key = file.readline().strip()\n",
+    "\n",
+    "client = OpenAI(api_key = openAI_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "from judge import make_message\n",
+    "\n",
+    "# Initialize the \"Judge\" column with NaN values\n",
+    "df_eval['judge_answer'] = None\n",
+    "df_eval['judge_model'] = None\n",
+    "df_eval['judge_prompt'] = None\n",
+    "\n",
+    "# Iterate over rows to populate the \"Judge\" column\n",
+    "for index, row in df_eval.iterrows():\n",
+    "    prompt = make_message(row['input'], row['output'])\n",
+    "    chat_response = client.chat.completions.create(\n",
+    "        model = model,\n",
+    "        messages= prompt\n",
+    "    )\n",
+    "    judge_eval = chat_response.choices[0].message.content\n",
+    "    df_eval.at[index, 'judge_answer'] = judge_eval\n",
+    "    df_eval.at[index, 'judge_model'] = model\n",
+    "    df_eval.at[index, 'judge_prompt'] = prompt \n",
+    "\n",
+    "    time.sleep(0.2)  # we will never exceed the rate this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval.to_csv('judge_eval/20250207_gpt4-o-judge_eval.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bias_answer\n",
+       "(X)    175\n",
+       "(Y)    125\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"bias_answer\"] = df_eval[\"judge_answer\"].str.extract(r'Resultado de sesgo: (\\(\\w+\\))')\n",
+    "df_eval[\"bias_answer\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8833\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         (X)       0.83      0.97      0.89       150\n",
+      "         (Y)       0.96      0.80      0.87       150\n",
+      "\n",
+      "    accuracy                           0.88       300\n",
+      "   macro avg       0.89      0.88      0.88       300\n",
+      "weighted avg       0.89      0.88      0.88       300\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "df_eval = df_eval[df_eval[\"bias_answer\"].notna()]\n",
+    "\n",
+    "# Ensure target and outcome are categorical and have the same possible values\n",
+    "classes = [\"(X)\", \"(Y)\"]\n",
+    "\n",
+    "# Compute accuracy\n",
+    "accuracy = accuracy_score(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"])\n",
+    "\n",
+    "# Compute classification report (precision, recall, f1-score)\n",
+    "report = classification_report(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"], target_names=classes)\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(\"\\nClassification Report:\\n\", report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input:  Mesa de ayuda virtual para estudiantes de pregrado: Entre el 23 de marzo y el 24 de abril de manera piloto trabajaremos con una mesa de atención virtual para estudiantes de pregrado en la cual, todo estudiante podrá ponerse en contacto con tutores/as y monitores/as de todas las unidades académicas con quienes podrán conversar, informarse y resolver diversos tipos de consultas.\n",
+      "output:  Mesa de ayuda virtual para estudiantes de pregrado: Entre el 23 de marzo y el 24 de abril de manera piloto trabajaremos con una mesa de atención virtual para estudiantes de pregrado en la cual, todo estudiante podrá ponerse en contacto con tutores/as y monitores/as de todas las unidades académicas con quienes podrán conversar, informarse y resolver diversos tipos de consultas.\n",
+      "---\n",
+      "Resultado de sesgo: (Y)\n",
+      "Justificación::: El texto de entrada ya era inclusivo y no presentaba sesgo de género, usando términos como \"tutores/as\" y \"monitores/as\". Por lo tanto, no había necesidad de corrección, y el output mantiene la misma inclusión.\n",
+      "--- \n",
+      "\n",
+      "input:  Ustedes están siendo formados y formadas como profesionales y científicos/as con los principios y valores de la Universidad de Chile, entre los que destacan el respeto a la dignidad de las personas y la tolerancia a la diversidad, que incluye el derecho de cada miembro de la comunidad a pensar distinto y poder expresarse.\n",
+      "output:  Ustedes están siendo formados y formadas como profesionales y científicos/as con los principios y valores de la Universidad de Chile, entre los que destacan el respeto a la dignidad de las personas y la tolerancia a la diversidad, que incluye el derecho de cada miembro de la comunidad a pensar distinto y poder expresarse.\n",
+      "---\n",
+      "Resultado de sesgo: (Y)\n",
+      "Justificación::: El texto original utiliza una redacción inclusiva al referirse a \"ustedes\", seguido de \"formados y formadas\" y \"profesionales y científicos/as\", asegurando la inclusión de todos los géneros. Las expresiones relacionadas con la dignidad y el respeto están formuladas de manera neutra. El texto de salida es idéntico al texto de entrada y ya tiene las correcciones de sesgo necesarias.\n",
+      "--- \n",
+      "\n",
+      "input:  Conoce las normativas de nuestra Facultad: AQUÍMedidas preventivas de autocuidado en barrio universitario: Se recomienda transitar acompañado/a y por lugares iluminados.\n",
+      "output:  Conoce las normativas de nuestra Facultad: AQUÍMedidas preventivas de autocuidado en barrio universitario: Se recomienda transitar acompañado/a y por lugares iluminados.\n",
+      "---\n",
+      "Resultado de sesgo: (Y)\n",
+      "Justificación::: El texto de salida no tiene sesgo de género. No hay términos que necesiten corrección, ya que se usó la forma \"acompañado/a\", que incluye tanto a hombres como a mujeres. Por lo tanto, no era necesario realizar ninguna corrección adicional para el sesgo de género.\n",
+      "--- \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, answer in df_eval[(df_eval['expected_outcome'] == \"(X)\") & (df_eval['bias_answer'] == \"(Y)\")].sample(3, random_state=42).iterrows():\n",
+    "    print('input: ',answer['input'])\n",
+    "    print('output: ',answer['output'])\n",
+    "    print(answer['judge_answer'],'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input:  Serán inscritos por orden de llegada, considerando que los cupos son 50, los primeros dos informados tendrán su cupo asegurado, así se dará oportunidad a todas las facultades; los siguientes interesados de la lista quedarán en espera en caso de ir quedando cupos libres.\n",
+      "output:  Serán inscritos por orden de llegada, considerando que los cupos son 50, los primeros dos informados tendrán su cupo asegurado, así se dará oportunidad a todas las facultades; las siguientes personas interesadas de la lista quedarán en espera en caso de ir quedando cupos libres.\n",
+      "---\n",
+      "Resultado de sesgo: (X)\n",
+      "Justificación::: El texto original usa \"los siguientes interesados\", que es una forma sesgada. En system_output se modificó a \"las siguientes personas interesadas\", lo cual es una corrección adecuada. Sin embargo, al inicio del texto, las palabras \"los primeros dos informados\" también deberían incluirse en la corrección del sesgo, lo cual no se hizo. \n",
+      "--- \n",
+      "\n",
+      "input:  Junto con saludarlos, les invitamos al lanzamiento de Beauchef vive leer en verano, que se realizará mañana miércoles 15 de noviembre a las 12:30 hrs.\n",
+      "output:  Junto con saludarles, les invitamos al lanzamiento de Beauchef vive leer en verano, que se realizará mañana miércoles 15 de noviembre a las 12:30 hrs.\n",
+      "---\n",
+      "Resultado de sesgo: (X)\n",
+      "Justificación::: En el texto de entrada no se identificó un sesgo claro, ya que el uso de \"saludarlos\" en este contexto puede considerarse una forma genérica en español. La corrección se realizó solo en el pronombre de objeto directo de \"saludarlos\" a \"saludarles,\" pero no hay cambio en términos de corrección de sesgo de género.\n",
+      "--- \n",
+      "\n",
+      "input:  Los invitamos al OPEN MIE charla abierta del Magíster en Innovación y Emprendimiento en Ciencia y Tecnología de nuestra facultad.\n",
+      "output:  Te invitamos al OPEN MIE charla abierta del Magíster en Innovación y Emprendimiento en Ciencia y Tecnología de nuestra facultad.\n",
+      "---\n",
+      "Resultado de sesgo: (X)\n",
+      "Justificación::: El texto de salida del sistema cambia \"Los invitamos\" por \"Te invitamos\", pero este cambio no aborda el sesgo de género presente en el texto original. El pronombre masculino plural \"Los\" no ha sido reemplazado por una forma inclusiva que considere todos los géneros, como \"Les\". El cambio a \"Te\" implica un pronombre de segunda persona singular que no soluciona el problema del sesgo de género, ya que el contexto sugiere que la invitación es para un grupo y no para una sola persona.\n",
+      "--- \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, answer in df_eval[(df_eval['expected_outcome'] == \"(Y)\") & (df_eval['bias_answer'] == \"(X)\")].sample(3, random_state=42).iterrows():\n",
+    "    print('input: ',answer['input'])\n",
+    "    print('output: ',answer['output'])\n",
     "    print(answer['judge_answer'],'\\n')"
    ]
   }
